# oscopilot

./: README.md  oscopilot.service  pyproject.toml
examples/: audit_example.jsonl  config.example.yaml
oscopilot/: __init__.py  agent_langchain.py  approval.py  auditing.py  cli.py  config.py  context.py  policy.py  utils.py
oscopilot/tools/: __init__.py  files.py  mcp_client.py  package_manager.py  system_info.py  systemd_tools.py
